sampleapp/notused/2048_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: game-2048
  name: ingress-2048
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8080}]'

spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /*
          pathType: Prefix
            backend:
              service:
                name: service-2048
                port: 
                  number: 80
